--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Graphic Design Portfolio</title>
+    <title>Mohit Yadav - Graphic Design Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>My Portfolio</h1>
+            <h1>Mohit Yadav</h1>
             <nav>
                 <ul>
                     <li><a href="#about">About</a></li>
@@ -23,7 +23,8 @@
     <section id="about" class="about-section">
         <div class="container">
             <h2>About Me</h2>
-            <p>Hello! I'm a graphic designer with a passion for creating stunning visuals that captivate and communicate effectively. My work spans various mediums and styles, always aiming to deliver top-notch results for my clients.</p>
+            <p>Hello! I'm Mohit Yadav, a graphic designer with over 3 years of experience in creating visually captivating designs for digital and print media. I am proficient in Adobe Creative Suite and excel in typography, color theory, and layout principles. My work spans various mediums and styles, always aiming to deliver top-notch results for my clients.</p>
+            <p>I hold a B. Tech in Computer Science and Engineering from Indra Gandhi University, Meerpur. Throughout my career, I've worked with companies like Techgeekz Services and KK Promotions, where I contributed to significant increases in engagement and brand visibility.</p>
         </div>
     </section>
     <section id="work" class="work-section">
@@ -54,11 +55,16 @@
                 <textarea id="message" name="message" required></textarea>
                 <button type="submit">Send</button>
             </form>
+            <p>You can also reach me at:</p>
+            <p>Email: <a href="mailto:mohitdahmewal@gmail.com">mohitdahmewal@gmail.com</a></p>
+            <p>Phone: +91 83075 21465</p>
+            <p>Location: Kothal Khurd, Mahendergarh, Haryana, India - 123028</p>
+            <p><a href="https://www.linkedin.com/in/mohit-yadav-63a166276/" target="_blank">LinkedIn Profile</a></p>
         </div>
     </section>
     <footer>
         <div class="container">
-            <p>&copy; 2024 My Portfolio. All rights reserved.</p>
+            <p>&copy; 2024 Mohit Yadav. All rights reserved.</p>
         </div>
     </footer>
     <script src="script.js"></script>
