--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap">
 </head>
-<body>
+<body id="scrollbar1">
     <header>
         <div class="container">
             <h1>Mohit Yadav</h1>
@@ -29,15 +29,52 @@
     </section>
     <section id="work" class="work-section">
         <div class="container">
-            <h2>My Work</h2>
-            <div class="work-gallery">
+            <h2>My Work</h2> <br>
+            <h3>Poster Designs</h3>
+            <div class="work-gallery scrollable" id="scrollbar2">
                 <div class="work-item">
-                    <img src="path/to/your/image1.jpg" alt="Project 1">
+                    <img src="ASSETS/Poster/BURGUR.png" alt="Project 1">
                     <p>Project 1 Description</p>
                 </div>
                 <div class="work-item">
                     <img src="path/to/your/image2.jpg" alt="Project 2">
                     <p>Project 2 Description</p>
+                </div>
+                <div class="work-item">
+                    <img src="path/to/your/image2.jpg" alt="Project 2">
+                    <p>Project 2 Description</p>
+                </div>
+                <div class="work-item">
+                    <img src="ASSETS/Poster/BURGUR.png" alt="Project 1">
+                    <p>Project 1 Description</p>
+                </div>
+                <div class="work-item">
+                    <img src="path/to/your/image2.jpg" alt="Project 2">
+                    <p>Project 2 Description</p>
+                </div>
+                <!-- Add more work items as needed -->
+            </div>
+            <h3>Logo Designs</h3>
+            <div class="work-gallery scrollable" id="scrollbar2">
+                <div class="work-item">
+                    <img src="ASSETS/Poster/BURGUR.png" alt="Project 1">
+                    <p>Project 1 Description</p>
+                </div>
+                <div class="work-item">
+                    <img src="path/to/your/image2.jpg" alt="Project 2">
+                    <p>Project 2 Description</p>
+                </div>
+                <div class="work-item">
+                    <img src="ASSETS/Poster/BURGUR.png" alt="Project 1">
+                    <p>Project 1 Description</p>
+                </div>
+                <div class="work-item">
+                    <img src="path/to/your/image2.jpg" alt="Project 2">
+                    <p>Project 2 Description</p>
+                </div>
+                <div class="work-item">
+                    <img src="ASSETS/Poster/BURGUR.png" alt="Project 1">
+                    <p>Project 1 Description</p>
                 </div>
                 <!-- Add more work items as needed -->
             </div>
@@ -55,7 +92,8 @@
                 <textarea id="message" name="message" required></textarea>
                 <button type="submit">Send</button>
             </form>
-            <p>You can also reach me at:</p>
+            <br><br><br><br><hr>
+            <h2>You can also reach me at:</h2>
             <p>Email: <a href="mailto:mohitdahmewal@gmail.com">mohitdahmewal@gmail.com</a></p>
             <p>Phone: +91 83075 21465</p>
             <p>Location: Kothal Khurd, Mahendergarh, Haryana, India - 123028</p>
