--- a/index.html
+++ b/index.html
@@ -9,17 +9,27 @@
 </head>
 <body id="scrollbar1">
     <header>
-        <div class="container">
-            <h1>Mohit Yadav</h1>
+        <div class="container" style="position: relative;">
             <nav>
                 <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#work">Work</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <h1>Mohit Yadav Portfolio</h1>
+                    <li style="margin-right: 0; position: absolute; right: 14%; top: 50%;"><a href="#work">Work</a></li>
+                    <li style="margin-right: 0; position: absolute; right: 8%; top: 50%;"><a href="#about">About</a></li>
+                    <li style="margin-right: 0; position: absolute; right: 2%; top: 50%;"><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
+    <br><br><br>
+    <section>
+        <div class="container" style="position: relative; height: 500px;">
+            <br><br><br><br>
+            <h1 class="theme-line">Transforming<dt>Ideas into</dt>Stunning Visuals</h1>
+            <a href="#work" class="my-work-button">My Work</a>
+            <img src="ASSETS/Poster/BURGUR.png" alt="" style="position: absolute; top: 5%; width: 40%; right: 20px;">
+        </div>
+    </section>
+    <br><br><br>
     <section id="about" class="about-section">
         <div class="container">
             <h2>About Me</h2>
