--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section>
         <div class="container" style="position: relative; height: 500px;">
             <br><br><br><br>
-            <h1 class="theme-line">Transforming<dt>Ideas into</dt>Stunning Visuals</h1>
+            <h1 class="theme-line">Transforming<dt>Your ideas into</dt>Stunning Visuals</h1>
             <a href="#work" class="my-work-button">My Work</a>
             <img src="ASSETS/Poster/BURGUR.png" alt="" style="position: absolute; top: 5%; width: 40%; right: 20px;">
         </div>
