--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container" style="position: relative;">
             <nav>
                 <ul>
-                    <h1>Mohit Yadav Portfolio</h1>
+                    <h1 style="color:#6B16E1;">Mohit Yadav <span style="color: #333;">Portfolio</span></h1>
                     <li style="margin-right: 0; position: absolute; right: 14%; top: 50%;"><a href="#work">Work</a></li>
                     <li style="margin-right: 0; position: absolute; right: 8%; top: 50%;"><a href="#about">About</a></li>
                     <li style="margin-right: 0; position: absolute; right: 2%; top: 50%;"><a href="#contact">Contact</a></li>
@@ -26,10 +26,10 @@
             <br><br><br><br>
             <h1 class="theme-line">Transforming<dt>Your ideas into</dt>Stunning Visuals</h1>
             <a href="#work" class="my-work-button">My Work</a>
-            <img src="ASSETS/Poster/BURGUR.png" alt="" style="position: absolute; top: 5%; width: 40%; right: 20px;">
+            <img src="ASSETS/Main/DESIGN.gif" alt="" style="position: absolute; top: 4%; width: 40%; right: 20px;">
         </div>
     </section>
-    <br><br><br>
+    <br><br><br><br><br><hr>
     <section id="about" class="about-section">
         <div class="container">
             <h2>About Me</h2>
@@ -64,6 +64,7 @@
                 </div>
                 <!-- Add more work items as needed -->
             </div>
+            <br><br>
             <h3>Logo Designs</h3>
             <div class="work-gallery scrollable" id="scrollbar2">
                 <div class="work-item">
