--- a/index.html
+++ b/index.html
@@ -9,24 +9,23 @@
 </head>
 <body id="scrollbar1">
     <header>
-        <div class="container" style="position: relative;">
-            <nav>
+        <div class="container">
+            <h1>Mohit Yadav <span>Portfolio</span></h1>
+            <nav class="list-container">
                 <ul>
-                    <h1 style="color:#6B16E1;">Mohit Yadav <span style="color: #333;">Portfolio</span></h1>
-                    <li style="margin-right: 0; position: absolute; right: 14%; top: 50%;"><a href="#work">Work</a></li>
-                    <li style="margin-right: 0; position: absolute; right: 8%; top: 50%;"><a href="#about">About</a></li>
-                    <li style="margin-right: 0; position: absolute; right: 2%; top: 50%;"><a href="#contact">Contact</a></li>
+                    <li><a href="#work">Work</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    <br><br><br>
-    <section>
-        <div class="container" style="position: relative; height: 500px;">
-            <br><br><br><br>
-            <h1 class="theme-line">Transforming<dt>Your ideas into</dt>Stunning Visuals</h1>
+    <section style="width: 100%;">
+        <br><br><br><br>
+        <div class="container2">
+            <h1 class="theme-line">Transforming Your ideas into Stunning Visuals</h1>
+            <img src="ASSETS/Main/DESIGN.gif" alt="" style="width: 80%; margin-left: 10%;">
             <a href="#work" class="my-work-button">My Work</a>
-            <img src="ASSETS/Main/DESIGN.gif" alt="" style="position: absolute; top: 4%; width: 40%; right: 20px;">
         </div>
     </section>
     <br><br><br><br><br><hr>
