--- a/index.html
+++ b/index.html
@@ -3,47 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
     <title>Mohit's Portfolio</title>
     <meta name="description" content="Mohit's Portfolio - A passionate graphic designer with over 3 years of experience in creating high-quality digital and print designs.">
     <meta name="keywords" content="Graphic Design, Portfolio, Web Development, Mohit">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <div class="container header-container">
-            <h1>Hey, I am Mohit</h1>
-            <nav>
-                <ul class="desktop-nav" aria-label="Main navigation">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#work">Work</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a href="#about">About</a></li>
-                </ul>
-                <div class="mobile-nav">
-                    <div class="hamburger" id="hamburger" aria-label="Toggle mobile menu">
-                        <span></span>
-                        <span></span>
-                    </div>
-                </div>
-            </nav>
+    <div class="main">
+        <div class="text">
+            <h1>Hey, <span>I am Mohit</span></h1>
         </div>
-        <div class="mobile-menu" id="mobile-menu">
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#work">Work</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#about">About</a></li>
-            </ul>
+        <ul class="nav">
+            <li><a class="nav-a" href="#">Home</a></li>
+            <li><a class="nav-a" href="#">About</a></li>
+            <li><a class="nav-a" href="#">Services</a></li>
+            <li><a class="nav-a" href="#">Contact</a></li>
+        </ul>
+        <div class="hamburger" id="hamburger">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
         </div>
-    </header>
+    </div>
+
+    <div class="mob-nav"><a href="#">Home</a></div>
+    <div class="mob-nav"><a href="#">About</a></div>
+    <div class="mob-nav"><a href="#">Services</a></div>
+    <div class="mob-nav"><a href="#">Contact</a></div>
     
     <section id="introduction" class="section">
         <div class="container">
             <h2>Introduction</h2>
-            <p>Hi, I'm Mohit. I'm a passionate graphic designer with over 3 years of experience in creating high-quality digital and print designs. I studied Computer Science and Engineering, and I'm skilled in various aspects of design and development.</p>
-            <p><strong>Education:</strong> Bachelor of Technology in Computer Science and Engineering</p>
-            <p><strong>Hobbies:</strong> Designing, Photography, Traveling, and Exploring new technologies.</p>
-            <p>I am constantly striving to improve my skills and stay updated with the latest trends in design and technology. My dedication to my craft and my desire to deliver the best results for my clients drives me to push the boundaries of creativity and innovation.</p>
+            <ul>
+                <li>Hi, I'm Mohit. I'm a passionate graphic designer with over 3 years of experience in creating high-quality digital and print designs. I studied Computer Science and Engineering, and I'm skilled in various aspects of design and development.</li>
+                <li><strong>Education:</strong> Bachelor of Technology in Computer Science and Engineering.</li>
+                <li><strong>Hobbies:</strong> Designing, Photography, Traveling, and Exploring new technologies.</li>
+                <li>I am constantly striving to improve my skills and stay updated with the latest trends in design and technology. My dedication to my craft and my desire to deliver the best results for my clients drives me to push the boundaries of creativity and innovation.</li>
+            </ul>
         </div>
     </section>
     
@@ -143,4 +139,4 @@
 
 
 
-<!-- how to fix only horizontal increase message text box in html -->
+
