--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <div class="cursor"></div>
+    <div class="custom-cursor" id="customCursor"></div>
 
     <div class="Back" onclick="topFunction()" id="myBtn"><h1>^</h1>
     </div>
