--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <video autoplay muted loop id="video-background">
+        <source src="ASSETS/Main/Background.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+
     <div class="custom-cursor" id="customCursor"></div>
 
     <div class="Back" onclick="topFunction()" id="myBtn"><h1>^</h1>
