--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
             <h2>My Gallery Highlights</h2>
             <a href="#" class="button">View All Gallery</a>
             <div class="gallery-images">
-                <img src="ASSETS/Poster/Gellery 2.png" alt="Gallery Image 1">
-                <img src="ASSETS/Poster/Gellery 1.png" alt="Gallery Image 2">
-                <img src="ASSETS/Poster/Gellery 1.png" alt="Gallery Image 3">
+                <img src="ASSETS/Poster/Gallery 2.png" alt="Gallery Image 1">
+                <img src="ASSETS/Poster/Gallery 1.png" alt="Gallery Image 2">
+                <img src="ASSETS/Poster/Gallery 1.png" alt="Gallery Image 3">
             </div>
         </div>
     </section>
