--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
+    <link
+            rel="icon"
+            href=
+"https://ibb.co/x77m4RL"
+            type="image/x-icon"
+        />
     <title>Mohit's Portfolio</title>
     <meta name="description" content="Mohit's Portfolio - A passionate graphic designer with over 3 years of experience in creating high-quality digital and print designs.">
     <meta name="keywords" content="Graphic Design, Portfolio, Web Development, Mohit">
