--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <footer id="about" align="center">
         <div class="container">
             <h2>Here is Info about me</h2>
-            <p>mohitdahmewal@gmail.com</p>
+            <p>mohitdahmewal@gmail.com | mohit8307521465@gmail.com </p>
             <p>+91 83075 21465</p>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/mohit-y-63a166276/"><img src="ASSETS/Logo/linkedin-icon.png" alt="LinkedIn"></a>
